Minor style update

--- a/stats.html
+++ b/stats.html
@@ -65,7 +65,7 @@
 				<div class="title">
 					<h1>DietPi OS stats & comparison</h1>
 					<p>See resource usage and performance stats of DietPi images, compared to Debian-based lite/minimal/server images of other projects.</p>
-					<h3>Note: This does not say that DietPi is better than other distributions, it does say that <b>Diet</b>Pi base images are lighter, being one of our major goals.</h3>
+					<h3 style="color:#181a1c">Note: This does not say that DietPi is better than other distributions, it does say that <b>Diet</b>Pi base images are lighter, being one of our major goals.</h3>
 					<p>Furthermore, the OS images provided by other projects do not say much about the project itself. Others focus more on own build systems, kernel development, and/or hardware. We maintain own kernel sources only for a small number of SBCs, and otherwise rely on and benefit from kernel development done by other projects. Instead, we focus on userland development, our large catalogue of ready-to-use software options, automated setups and lightweight base images.</p>
 					<p>We do believe in the benefits of shipping minimal base images, allowing a better overview of installed packages and available features, less disk I/O on APT upgrades, installing additional packages only on demand. However, this may not be important for everyone, and some may prefer to have more packages/features pre-installed, hence less need to install things afterwards. This is hence not a question of better/worse, but one of personal priorities and preferences, for the own Linux system use case.</p>
 					<p>Further details about the compared values, <i>though with outdated results</i>, can be found in our <a href="https://dietpi.com/blog/?p=888" target="_blank" rel="noopener">blog post</a>.</p>
