--- a/stats.html
+++ b/stats.html
@@ -286,14 +286,14 @@
 						<a href="#distrostats" class="thumbnail" rel="#debian1">
 							<img src="images/stats/debian.svg" alt="Debian logo" width="8" height="5" loading="lazy">
 							<h3>Debian</h3>
-							<p>on Odroid C4</p>
+							<p>on x86_64 UEFI PC</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix debian">
 						<a href="#distrostats" class="thumbnail" rel="#debian2">
 							<img src="images/stats/debian.svg" alt="Debian logo" width="8" height="5" loading="lazy">
 							<h3>Debian</h3>
-							<p>on x86_64 PC</p>
+							<p>on x86_64 VM</p>
 						</a>
 					</div>
 				</div>
