--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi Beta v9.5 is read</h2>
+					<h2>DietPi Beta v9.5 is ready</h2>
 					<h4>Please help testing our upcoming release</h4>
 					<p>Forgejo Git server added to dietpi-software; Jellyfin FFmpeg 5 => 6 upgrade applied on all systems; Fixed reboot on Odroid C1/C2; Fixed onboard Ethernet on Orange Pi Zero 3; Fixed LEDs on NanoPi NEO</p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7097" target="_blank" rel="noopener">All info</a>
