--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi Beta v9.5 is ready</h2>
 					<h4>Please help testing our upcoming release</h4>
-					<p>Forgejo Git server added to dietpi-software; Jellyfin FFmpeg 5 => 6 upgrade applied on all systems; Fixed reboot on Odroid C1/C2; Fixed onboard Ethernet on Orange Pi Zero 3; Fixed LEDs on NanoPi NEO</p>
+					<p>Forgejo Git server added to dietpi-software; Jellyfin FFmpeg 5 => 6 upgrade applied on all systems; Fixed reboot on Odroid C1/C2; Fixed onboard Ethernet on Orange Pi Zero 2W; Fixed LEDs on NanoPi NEO</p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7097" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
