Add v9.5 release slide

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi Beta v9.5 is ready</h2>
-					<h4>Please help testing our upcoming release</h4>
+					<h2>DietPi v9.5 has been released</h2>
+					<h4>Check out all changes</h4>
 					<p>Forgejo Git server added to dietpi-software; Jellyfin FFmpeg 5 => 6 upgrade applied on all systems; Fixed reboot on Odroid C1/C2; Fixed onboard Ethernet on Orange Pi Zero 2W; Fixed LEDs on NanoPi NEO</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7097" target="_blank" rel="noopener">All info</a>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_5/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
