--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi Beta v9.6 is ready</h2>
-					<h4>Please help testing our upcoming release</h4>
+					<h2>DietPi v9.6 has been released</h2>
+					<h4>Check out all changes</h4>
 					<p>soju IRC bouncer added to software catalogue. Migration to own APT repository completed, hosting all non-RPi ARM Linux and U-Boot packages. Fixed randomised MAC addresses on older Orange Pi 5 systems.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/7136" target="_blank" rel="noopener">Release notes</a>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_6/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
