Update some info
Remove some obsolete pros/cons (we want to remove all of them, probably converting into facts in description), leave the "joke" ones. Update some info.

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -623,9 +623,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/media/#koel" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Simple web interface media streaming server.</div>
-								<div><span>Cons:</span>Vast number of requirements resulting in bulky installation, sub-par performance.</div>
 							</div>
 							<p>Koel is a simple web-based personal audio streaming service written in Vue on the client side and Laravel on the server side. Targeting web developers, Koel embraces some of the more modern web technologies – Flexbox, audio, and drag-and-drop API to name a few – to do its job.</p>
 						</div>
@@ -676,7 +673,7 @@
 								<div><a href="https://dietpi.com/docs/software/bittorrent/#deluge" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature rich BitTorrent server.</div>
-								<div><span>Cons:</span>Coded in Python.</div>
+								<div><span>Cons:</span>Coded in Python :P</div>
 							</div>
 							<p>Deluge, the web interface BitTorrent server that allows you to download BitTorrent files. This python coded BitTorrent server is an alternative to the lightweight Transmission option.</p>
 						</div>
@@ -906,7 +903,7 @@
 								<div><a href="https://dietpi.com/docs/software/gaming/#mineos" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Easily create and control multiple Minecraft servers</div>
-								<div><span>Cons:</span>Coded in Python (reduced performance)</div>
+								<div><span>Cons:</span>Coded in Python :P</div>
 							</div>
 							<p>MineOS allows you to create and control multiple Minecraft servers with ease, using a simple web interface.</p>
 						</div>
@@ -924,7 +921,7 @@
 								<div><a href="https://dietpi.com/docs/software/gaming/#nukkit" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<br>
 								<div><span>Pros:</span>TBA</div>
-								<div><span>Cons:</span>Coded in JAVA (reduced performance)</div>
+								<div><span>Cons:</span>Coded in Java :P</div>
 							</div>
 							<p>Nukkit is Java based server for Minecraft Pocket Edition</p>
 						</div>
@@ -1186,9 +1183,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/social/#wordpress" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Go go gadget website!</div>
-								<div><span>Cons:</span>Somewhat bulky installation, due to webserver requirement</div>
 							</div>
 							<p>WordPress is a state-of-the-art semantic personal publishing platform with a focus on aesthetics, web standards, and usability. Allowing you to create your own website.</p>
 						</div>
@@ -1222,9 +1216,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/social/#baikal" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>None</div>
-								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Lightweight CalDAV + CardDAV server.</p>
 						</div>
@@ -1246,11 +1237,11 @@
 					</div>
 				</div>
 				<div id="wifihotspot" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/wifihotspot_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/wifihotspot_0.jpg" alt="WiFi HotSpot promotional image" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/wifihotspot_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/wifihotspot_0.jpg" alt="WiFi Hotspot promotional image" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>WiFi HotSpot</h3>
+								<h3>WiFi Hotspot</h3>
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
@@ -1268,7 +1259,7 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Tor HotSpot</h3>
+								<h3>Tor Hotspot</h3>
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
@@ -1277,7 +1268,7 @@
 								<div><span>Pros:</span>Share the love! (the other internet)</div>
 								<div><span>Cons:</span>Don't share it too much!</div>
 							</div>
-							<p>Turn your device into a WiFi HotSpot/Access Point with Tor routing. All WiFi HotSpot traffic will be routed through the Tor network, for all connected WiFi devices. Perfect for users requiring anonymity and privacy.</p>
+							<p>Turn your device into a WiFi Hotspot/Access Point with Tor routing. All WiFi Hotspot traffic will be routed through the Tor network, for all connected WiFi devices. Perfect for users requiring anonymity and privacy.</p>
 						</div>
 					</div>
 				</div>
@@ -1351,9 +1342,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/hardware_projects/#wiringpi" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Coded in C</div>
-								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Alternative GPIO interface library based on c. Bring out the engineer in you! </p>
 						</div>
@@ -1530,9 +1518,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/system_stats/#linux-dash" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>None</div>
-								<div><span>Cons:</span>Bulky install due to webserver requirement</div>
 							</div>
 							<p>Linux Dash allows you to monitor your system stats from a webpage.</p>
 						</div>
@@ -1548,9 +1533,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/system_stats/#phpsysinfo" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>None</div>
-								<div><span>Cons:</span>Bulky install due to webserver requirement</div>
 							</div>
 							<p>Allows you to monitor your system stats from a webpage.</p>
 						</div>
@@ -1626,11 +1608,11 @@
 					</div>
 				</div>
 				<div id="apache2" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/apache2_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/apache2_0.jpg" alt="Apache2 logo" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/apache2_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/apache2_0.jpg" alt="Apache logo" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Apache2</h3>
+								<h3>Apache</h3>
 								<span class="close"></span>
 							</div>
 							<div class="project-info">
@@ -1658,7 +1640,7 @@
 								<div><span>Pros:</span>Good performance and functionality in a lightweight package</div>
 								<div><span>Cons:</span>Not as light as Lighttpd</div>
 							</div>
-							<p>Host your own website! Nginx is the middle ground between performance (Lighttpd) and bulk (Apache2), whilst keeping many features available in Apache2. Ideal for general use, regardless of expected web traffic load.</p>
+							<p>Host your own website! Nginx is the middle ground between performance (Lighttpd) and bulk (Apache), whilst keeping many features available in Apache. Ideal for general use, regardless of expected web traffic load.</p>
 							<p>NB: DietPi will automatically install a webserver stack if any software requires it. For most users, you should never need to manually install one. By default this is Lighttpd, however, you can change this in the DietPi-Software menu.</p>
 						</div>
 					</div>
@@ -1898,7 +1880,7 @@
 								<div><a href="https://dietpi.com/docs/software/ssh/#dropbear" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight SSH server</div>
-								<div><span>Cons:</span>Lacks full SCP/SFTP support</div>
+								<div><span>Cons:</span>SCP/SFTP support needs to be additionally installed.</div>
 							</div>
 							<p>Lightweight SSH server, installed by default on DietPi systems.</p>
 						</div>
@@ -2004,9 +1986,6 @@
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/bittorrent/#lidarr" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Slick web interface</div>
-								<div><span>Cons:</span>Currently in early Beta</div>
 							</div>
 							<p>Automatically download your favorite music from various artists, as they become available. It can monitor multiple RSS feeds for new music of your favorite artists and will grab, sort and rename them.</p>
 						</div>
@@ -3861,15 +3840,15 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix WiFi">
 						<a href="#softwareinfo" class="thumbnail" rel="#wifihotspot">
 							<img src="images/dietpi-software/wifihotspot_0.jpg" alt="WiFi hotspot explanatory image" width="8" height="5" loading="lazy">
-							<h3>WiFi HotSpot</h3>
-							<p>Regular WPA WiFi HotSpot</p>
+							<h3>WiFi Hotspot</h3>
+							<p>Regular WPA WiFi Hotspot</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix WiFi">
 						<a href="#softwareinfo" class="thumbnail" rel="#torhotspot">
 							<img src="images/dietpi-software/torwifihotspot_0.jpg" alt="Tor WiFi logo" width="8" height="5" loading="lazy">
-							<h3>Tor HotSpot</h3>
-							<p>Tor enabled WiFi HotSpot</p>
+							<h3>Tor Hotspot</h3>
+							<p>Tor enabled WiFi Hotspot</p>
 						</a>
 					</div>
 					<!-- Home Automation -->
@@ -4076,7 +4055,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix WebserverStacks">
 						<a href="#softwareinfo" class="thumbnail" rel="#apache2">
 							<img src="images/dietpi-software/apache2_0.jpg" alt="Apache logo" width="8" height="5" loading="lazy">
-							<h3>Apache2</h3>
+							<h3>Apache</h3>
 							<p>Feature-rich webserver</p>
 						</a>
 					</div>
