--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.7 has been released</h2>
+					<h2>DietPi v9.8 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>This update offers a major kernel upgrade for RK3588 SBCs like Orange Pi 5/5 Plus, NanoPi R5/R6 series and Radxa ROCK 5 A/B, as well as some bug fixes.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v9_7/" target="_blank" rel="noopener">Release notes</a>
+					<p>This release adds support for the Orange Pi 3B v2.1 revision board, and contains bug fixes for some other Orange Pi, NanoPi and Radxa SBCs.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v9_8/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
