--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1104,6 +1104,24 @@
 						</div>
 					</div>
 				</div>
+				<div id="forgejo" class="row single-project">
+					<div class="col-md-4"><a href="images/dietpi-software/forgejo-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/forgejo-small.png" alt="Forgejo frontend screenshot" loading="lazy"></a></div>
+					<div class="col-md-8">
+						<div class="project-description">
+							<div class="project-title clearfix">
+								<h3>Forgejo</h3>
+								<span class="close"></span>
+							</div>
+							<div class="project-info">
+								<div><a href="https://dietpi.com/docs/software/cloud/#forgejo" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Host your own GitHub style server</div>
+								<div><span>Cons:</span>None</div>
+							</div>
+							<p>Your very own GitHub style server, with web interface.</p>
+						</div>
+					</div>
+				</div>
 				<div id="gitea" class="row single-project">
 					<div class="col-md-4"><a href="images/dietpi-software/gitea_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/gitea_1.jpg" alt="Gitea frontend screenshot" loading="lazy"></a></div>
 					<div class="col-md-8">
@@ -3713,6 +3731,13 @@
 						<a href="#softwareinfo" class="thumbnail" rel="#gogs">
 							<img src="images/dietpi-software/gogs_0.jpg" alt="Gogs logo" width="8" height="5" loading="lazy">
 							<h3>Gogs</h3>
+							<p>GitHub style server & web interface</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Cloud">
+						<a href="#softwareinfo" class="thumbnail" rel="#forgejo">
+							<img src="images/dietpi-software/forgejo-logo.svg" alt="Forgejo logo" width="8" height="5" loading="lazy">
+							<h3>Gitea</h3>
 							<p>GitHub style server & web interface</p>
 						</a>
 					</div>
