--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -3737,7 +3737,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Cloud">
 						<a href="#softwareinfo" class="thumbnail" rel="#forgejo">
 							<img src="images/dietpi-software/forgejo-logo.svg" alt="Forgejo logo" width="8" height="5" loading="lazy">
-							<h3>Gitea</h3>
+							<h3>Forgejo</h3>
 							<p>GitHub style server & web interface</p>
 						</a>
 					</div>
