Make clear that Orange Pi 5 download supports Pro as well

--- a/index.html
+++ b/index.html
@@ -1670,14 +1670,14 @@
 				</div>
 				<!-- Orange Pi 5 -->
 				<div id="orangepi5" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5/5 Pro</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
 								<div><span>USB:</span>1x USB 3.0 2x USB 2.0 1x USB Type-C (USB 3.1)</div>
-								<div><span>NET:</span>Gbit Ethernet</div>
+								<div><span>NET:</span>Gbit Ethernet + onboard WiFi 5/Bluetooth (Pro)</div>
 								<div><span>Storage:</span>microSD, eMMC and M.2 2242 NVMe sockets</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
@@ -1687,7 +1687,7 @@
 									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
 								</div>
 							</div>
-							<p>The new Orange Pi flagship SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
+							<p>The new Orange Pi flagship SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi. The Pro variant, which is supported by this image as well, additionally has an onboard WiFi 5 and Bluetooth adapter.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/orange-pi-5.jpg" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy"></div>
 					</div>
