Offer uncompressed ISO and ISO images for VMs

--- a/index.html
+++ b/index.html
@@ -544,7 +544,8 @@
 							<div class="project-info">
 								<div><span>RAM:</span>1 GiB | Can be changed</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_Hyper-V-x86_64-Bookworm.vhdx.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_Hyper-V-x86_64-Bookworm.vhdx.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_Hyper-V-x86_64-Bookworm.vhdx.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_Hyper-V-x86_64-Bookworm.vhdx.xz"><span>Virtual disk image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_Hyper-V-x86_64-Bookworm.vhdx.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_Hyper-V-x86_64-Bookworm.vhdx.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso"><span>Installer ISO image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_DietPi_VM-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>The Hyper-V virtual machine is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience.</p>
@@ -560,7 +561,8 @@
 							<div class="project-info">
 								<div><span>RAM:</span>1 GiB | Can be changed</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_VMX-x86_64-Bookworm.tar.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VMX-x86_64-Bookworm.tar.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_VMX-x86_64-Bookworm.tar.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VMX-x86_64-Bookworm.tar.xz"><span>VMX appliance:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VMX-x86_64-Bookworm.tar.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_VMX-x86_64-Bookworm.tar.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso"><span>Installer ISO image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_DietPi_VM-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -579,7 +581,8 @@
 							<div class="project-info">
 								<div><span>RAM:</span>1 GiB | Can be changed</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_UTM-x86_64-Bookworm.tar.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_UTM-x86_64-Bookworm.tar.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_UTM-x86_64-Bookworm.tar.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_UTM-x86_64-Bookworm.tar.xz"><span>UTM appliance:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_UTM-x86_64-Bookworm.tar.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_UTM-x86_64-Bookworm.tar.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso"><span>Installer ISO image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_DietPi_VM-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -598,7 +601,8 @@
 							<div class="project-info">
 								<div><span>ARCH:</span>x86_64</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bookworm.qcow2.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bookworm.qcow2.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bookworm.qcow2.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bookworm.qcow2.xz"><span>Virtual disk image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bookworm.qcow2.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bookworm.qcow2.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso"><span>Installer ISO image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_DietPi_VM-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -647,6 +651,7 @@
 									<a href="https://dietpi.com/downloads/images/DietPi_ESXi-x86_64-Bookworm.ova.xz"><span>OVA appliance:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_ESXi-x86_64-Bookworm.ova.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_ESXi-x86_64-Bookworm.ova.xz.asc"><u>Signature</u></a>)
 									<br>This appliance can be used with <b>VMware vSphere</b> and <b>ESXi</b>.
 								</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso"><span>Installer ISO image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_DietPi_VM-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -665,7 +670,8 @@
 							<div class="project-info">
 								<div><span>RAM:</span>1 GiB | Can be changed</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_VirtualBox-x86_64-Bookworm.ova.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VirtualBox-x86_64-Bookworm.ova.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_VirtualBox-x86_64-Bookworm.ova.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VirtualBox-x86_64-Bookworm.ova.xz"><span>OVA appliance:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VirtualBox-x86_64-Bookworm.ova.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_VirtualBox-x86_64-Bookworm.ova.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso"><span>Installer ISO image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_VM-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_DietPi_VM-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<span>Bullseye images:</span>
@@ -1041,7 +1047,7 @@
 									<br>Choose this to write and boot directly, without any installer.
 								</div>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bookworm_Installer.iso.xz"><span>Installer image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bookworm_Installer.iso.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bookworm_Installer.iso.xz.asc"><u>Signature</u></a>)
+									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bookworm_Installer.iso"><span>Installer image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)
 									<br>Choose this to write to e.g. a USB stick to boot and install DietPi to an internal drive.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
@@ -1084,7 +1090,7 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.xz"><span>Installer image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.xz.asc"><u>Signature</u></a>)
+									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso"><span>Installer image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bookworm_Installer.iso.asc"><u>Signature</u></a>)
 									<br>Write to e.g. a USB stick to boot and install DietPi to an internal drive.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
