Orange Pi 5 image supports 5B but not 5 Pro

--- a/index.html
+++ b/index.html
@@ -1676,7 +1676,7 @@
 				</div>
 				<!-- Orange Pi 5 -->
 				<div id="orangepi5" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5/5 Pro</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5/5B</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
