--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v9.8 has been released</h2>
+					<h2>DietPi v9.9 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>This release adds support for the Orange Pi 3B v2.1 revision board, and contains bug fixes for some other Orange Pi, NanoPi and Radxa SBCs.</p>
+					<p>Support and new images added for Orange Pi 5 Pro, Orange Pi 5 Max and NanoPi M6. DietPi-DDNS now supports updating IPv4 and IPv6 addresses at the same time. MineOS login issue solved, and more.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v9_8/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
@@ -1457,6 +1457,30 @@
 						<div class="col-md-6"><img src="images/sbc_images/nanopct6.jpg" alt="NanoPC T6 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<!-- NanoPi M6 -->
+				<div id="nanopct6" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi M6</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4-32 GiB LPDDR5</div>
+								<div><span>USB:</span>1x USB 3.0 + 2x USB 2.0</div>
+								<div><span>NET:</span>Gbit Ethernet + M.2 WiFi socket</div>
+								<div><span>Storage:</span>eMMC + M.2 NVMe sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiM6-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiM6-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_NanoPiM6-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<span>Bullseye images:</span>
+									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
+								</div>
+							</div>
+							<p>A new variant of the NanoPi 6 series. Compared to the NanoPi R6S/R6C and NanoPC T6, aside of the great onboard features, we observed a significantly lower idle power usage. As usual, the optional metal case keeps it at cool temperatures, and has an LCD display builtin, which can be enabled via device tree overlay in DietPi. A related dietpi-config toggle is added with next release.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopim6.jpg" alt="NanoPi M6 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<!-- Pinebook Pro -->
 				<div id="pinebookpro" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Pinebook Pro</h3><span class="close"></span></div></div>
@@ -1674,7 +1698,7 @@
 						<div class="col-md-6"><img src="images/sbc_images/orangepi3b.jpg" alt="Orange Pi 3B photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
-				<!-- Orange Pi 5 -->
+				<!-- Orange Pi 5/5B -->
 				<div id="orangepi5" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5/5B</h3><span class="close"></span></div></div>
 					<div class="row">
@@ -1683,8 +1707,8 @@
 								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
 								<div><span>USB:</span>1x USB 3.0 2x USB 2.0 1x USB Type-C (USB 3.1)</div>
-								<div><span>NET:</span>Gbit Ethernet + onboard WiFi 5/Bluetooth (Pro)</div>
-								<div><span>Storage:</span>microSD, eMMC and M.2 2242 NVMe sockets</div>
+								<div><span>NET:</span>Gbit Ethernet, 5B only: onboard WiFi 6/Bluetooth</div>
+								<div><span>Storage:</span>microSD, M.2 2242 NVMe socket, 5B only: onboard eMMC</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
@@ -1693,7 +1717,7 @@
 									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
 								</div>
 							</div>
-							<p>The new Orange Pi flagship SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi. The Pro variant, which is supported by this image as well, additionally has an onboard WiFi 5 and Bluetooth adapter.</p>
+							<p>The new Orange Pi flagship SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi. The 5B variant, which is supported by this image as well, additionally has an onboard WiFi 6 and Bluetooth adapter, eMMC flash, but no M.2 socket.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/orange-pi-5.jpg" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -1720,6 +1744,54 @@
 							<p>A larger revision of the Orange Pi 5, with triple HDMI, dual 2.5 Gbit Ethernet and space for larger NVMe SSDs up to M.2 2280 factor.</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/orangepi5plus.jpg" alt="Orange Pi 5 Plus photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- Orange Pi 5 Pro -->
+				<div id="orangepi5" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5 Pro</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
+								<div><span>USB:</span>1x USB 3.1 3x USB 2.0</div>
+								<div><span>NET:</span>Gbit Ethernet and WiFi 5/Bluetooth</div>
+								<div><span>Storage:</span>microSD, eMMC and M.2 2280 NVMe sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Pro-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Pro-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Pro-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<span>Bullseye images:</span>
+									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
+								</div>
+							</div>
+							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features onboard WiFi 5, an eMMC slot, dual HDMI, and supports NVMe SSDs up to 2280 format.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/orangepi5pro.jpg" alt="Orange Pi 5 Pro photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- Orange Pi 5 Max -->
+				<div id="orangepi5" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5 Max</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
+								<div><span>USB:</span>2x USB 3.0 2x USB 2.0</div>
+								<div><span>NET:</span>2.5 Gbit Ethernet and WiFi 6/Bluetooth</div>
+								<div><span>Storage:</span>microSD, eMMC and M.2 2280 NVMe sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Max-ARMv8-Bookworm.img.xz"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a> (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Max-ARMv8-Bookworm.img.xz.sha256"><u>SHA256</u></a>) (<a href="https://dietpi.com/downloads/images/DietPi_OrangePi5Max-ARMv8-Bookworm.img.xz.asc"><u>Signature</u></a>)</div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<span>Bullseye images:</span>
+									<br>We provide images based on the older Debian Bullseye release as well, as not all software in our catalogue is compatible with Debian Bookworm yet. All info about this can be found <a href="https://dietpi.com/blog/?p=3128" target="_blank" rel="noopener">here</a>.
+								</div>
+							</div>
+							<p>A new variant of the Orange Pi 5 family. Compared to the original Orange Pi 5, it features onboard WiFi 6E, 2.5G Ethernet, an eMMC slot, dual HDMI, and supports NVMe SSDs up to 2280 format.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/orangepi5max.jpg" alt="Orange Pi 5 Max photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<!-- Orange Pi Zero 3 -->
@@ -2024,6 +2096,20 @@
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5pro">
+							<img src="images/sbc_images/orangepi5pro.jpg" alt="Orange Pi 5 Pro photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi 5 Pro</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
+						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5max">
+							<img src="images/sbc_images/orangepi5max.jpg" alt="Orange Pi 5 Max photo" width="8" height="5" loading="lazy">
+							<h3>Orange Pi 5 Max</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
 						<a href="#downloadinfo" class="thumbnail" rel="#orangepizero3">
 							<img src="images/sbc_images/orangepizero3.jpg" alt="Orange Pi Zero 3 photo" width="8" height="5" loading="lazy">
 							<h3>Orange Pi Zero 3</h3>
@@ -2125,6 +2211,13 @@
 						<a href="#downloadinfo" class="thumbnail" rel="#nanopct6">
 							<img src="images/sbc_images/nanopct6.jpg" alt="NanoPC T6 photo" width="8" height="5" loading="lazy">
 							<h3>NanoPC T6</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<a href="#downloadinfo" class="thumbnail" rel="#nanopct6">
+							<img src="images/sbc_images/nanopim6.jpg" alt="NanoPi M6 photo" width="8" height="5" loading="lazy">
+							<h3>NanoPi M6</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
