Typo OPI LTS -> OPI 3 LTS

--- a/index.html
+++ b/index.html
@@ -1652,7 +1652,7 @@
 				</div>
 				<!-- Orange Pi 3 LTS -->
 				<div id="orangepi3lts" class="single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi LTS</h3><span class="close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 3 LTS</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
@@ -1671,7 +1671,7 @@
 							</div>
 							<p>A credit card sized SBC with older Allwinner H6 SoC. Since the similarly featured Orange Pi 3B is available with faster CPU, RAM and otherwise similar hardware features/aspects, is available for minimal surcharge, there is probably not really a reason to buy this anymore. But if you have one, we got you covered.</p>
 						</div>
-						<div class="col-md-6"><img src="images/sbc_images/orangepi3lts.jpg" alt="Orange Pi LTS photo" width="8" height="5" loading="lazy"></div>
+						<div class="col-md-6"><img src="images/sbc_images/orangepi3lts.jpg" alt="Orange Pi 3 LTS photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<!-- Orange Pi 3B -->
