--- a/index.html
+++ b/index.html
@@ -1458,7 +1458,7 @@
 					</div>
 				</div>
 				<!-- NanoPi M6 -->
-				<div id="nanopct6" class="single-project">
+				<div id="nanopim6" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi M6</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1747,7 +1747,7 @@
 					</div>
 				</div>
 				<!-- Orange Pi 5 Pro -->
-				<div id="orangepi5" class="single-project">
+				<div id="orangepi5pro" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5 Pro</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1771,7 +1771,7 @@
 					</div>
 				</div>
 				<!-- Orange Pi 5 Max -->
-				<div id="orangepi5" class="single-project">
+				<div id="orangepi5max" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Orange Pi 5 Max</h3><span class="close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -2215,7 +2215,7 @@
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
-						<a href="#downloadinfo" class="thumbnail" rel="#nanopct6">
+						<a href="#downloadinfo" class="thumbnail" rel="#nanopim6">
 							<img src="images/sbc_images/nanopim6.jpg" alt="NanoPi M6 photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi M6</h3>
 							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
